--- a/app/views/storepromotions/_table.html.erb
+++ b/app/views/storepromotions/_table.html.erb
@@ -79,7 +79,25 @@
   <tr><td>Mr Porter</td><td>https://bit.ly/2QVHmex</td><td>https://i.pinimg.com/564x/aa/1b/ce/aa1bce24cfff7b5445d5328238560e4c.jpg</td></tr>
   <tr><td>macys</td><td>https://bit.ly/2wlwECV</td><td>https://i.pinimg.com/564x/07/bf/92/07bf92abe3e766c51a14adf5128fc919.jpg</td></tr>
   <tr><td>Kmart</td><td>https://bit.ly/3biTDln</td><td>https://i.pinimg.com/564x/e4/a3/9f/e4a39f24225001ca8700065197a0b908.jpg</td></tr>
+  <tr><td>neiman marcus</td><td>https://bit.ly/2JeLYag</td><td>https://i.pinimg.com/564x/31/72/00/3172003e15701d2b725025e8b9d3025e.jpg</td></tr>
+  <tr><td>bloomingdales</td><td>https://bit.ly/2JDQ5zl</td><td>https://i.pinimg.com/564x/1a/1a/82/1a1a82c06bb914532c766e730f5ada10.jpg</td></tr>
+  <tr><td>Target</td><td>https://bit.ly/2XpCrXO</td><td>https://i.pinimg.com/564x/57/5a/ab/575aab6da6e3ee8e3d5b9a2d74e784e8.jpg</td></tr>
   <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+  <tr><td>Site_Name</td><td>Affiliate_Link</td><td>Logo_Link</td></tr>
+
 
  
 </table>
