--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -11,6 +11,10 @@
   <%= render 'deals/header' %> 
 
     <div class="quicksearch common_layout codes">
+
+      <div class="set_search clearfix">
+        <%= render 'deals/set_search' %>
+      </div>
       
         <div class="lt_cnt">
           <h2 class="quick_h2">Quick Search</h2>
