--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -126,7 +126,7 @@
 /* Form Page */
 .hotdeal_form{width:1200px;}
 .hotdeal_form .basic_info{width:800px;}
-.hotdeal_form input, .hotdeal_form textarea{display:block;width:100%;height:40px;margin-bottom:20px;}
+.hotdeal_form input, .hotdeal_form textarea{display:block;width:100%;height:40px;margin-bottom:20px;border:1px solid #ccc;}
 .hotdeal_form textarea{height:80px;}
 .hotdeal_form trix-editor{min-height:15em;}
 .hotdeal_form label{font-size:13px;}
