--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -32,7 +32,7 @@
           <h2>Real Time Hot Deal Finder on Amazon</h2>
           <h2 class="for_m">Real Time Hot Deal Finder on Amazon</h2>
           
-          <%= render 'shared/amz_search' %>
+          <!-- <%= render 'shared/amz_search' %> -->
            
           <table class="tg">
               <tr>
