--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Coupons, Sales & Offer, Promotions, Brand Deals on Amazon" %>
+<!-- <% content_for :title, "Coupons, Sales & Offer, Promotions, Brand Deals on Amazon" %> -->
 <div class="layout"><!--layout-->
  <div class="wrap">   
   <%= render 'shared/header_short' %>
