--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -14,6 +14,7 @@
 
       <% if can? :update, @promocode %>
         <div class="set_search clearfix">
+          test
           <%= render 'deals/set_search' %>
         </div>
       <% end %>
