--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -15,7 +15,7 @@
       <% if can? :update, @promocode %>
         <div class="set_search clearfix">
           test
-          <%= render 'deals/set_search' %>
+          <%= render 'deals/isnot' %>
         </div>
       <% end %>
       
