--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -614,3 +614,98 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+.box {
+  width: 500px;
+  background: white;
+  margin: auto;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border: 1px solid #aaa;
+}
+h2 {
+  font-weight: 300;
+  margin: 0 0 20px;
+}
+.disable {
+  display: none;
+}
+.post-type {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  margin-bottom: 20px;
+}
+.post-type input {
+  display: none;
+}
+.post-type input:checked + label {
+  background: #bad455;
+  color: white;
+}
+.post-type label {
+  display: table-cell;
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #e3e3e3;
+  border-left: none;
+  cursor: pointer;
+}
+.post-type label:first-of-type {
+  border-left: 1px solid #e3e3e3;
+}
+.field {
+  padding: 15px 0;
+  overflow: hidden;
+}
+.field span.label {
+  width: 40%;
+  float: left;
+  text-align: right;
+  padding: 5px 10px;
+}
+.field input,
+.field select {
+  width: 60%;
+  float: left;
+  padding: 5px 10px;
+  border: 1px solid #e3e3e3;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  border-radius: 0;
+}
+.field .custom-time {
+  padding-left: 40%;
+  padding-top: 10px;
+  clear: both;
+}
+.field .custom-time select,
+.field .custom-time input {
+  width: 45%;
+}
+.field .custom-time select {
+  margin-right: 10%;
+}
+.text-center {
+  padding-top: 30px;
+  text-align: right;
+}
+button {
+  background: #bad455;
+  border: none;
+  padding: 10px 20px;
+}
