--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -15,6 +15,10 @@
       <% if can? :update, @promocode %>
         <div class="set_search clearfix">
           <%= render 'deals/set_search' %>
+          <br>
+          <br>
+          <br>
+          <%= render 'deals/isnot' %>
         </div>
       <% end %>
       
