--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -30,7 +30,7 @@
     <select name="time">
       <option value="">Anytime</option>
       <option value="custom">Custom</option>
-      <option value="stories-live">Just now (live)</option>
+      <!-- <option value="stories-live">Just now (live)</option>
       <option value="today/date/stories">Today</option>
       <option value="yesterday/date/stories">Yesterday</option>
       <option value="this-week/date/stories">This week</option>
@@ -38,28 +38,42 @@
       <option value="this-month/date/stories">This month</option>
       <option value="last-month/date/stories">Last month</option>
       <option value="this-year/date/stories">This year</option>
-      <option value="last-year/date/stories">Last year</option>
+      <option value="last-year/date/stories">Last year</option> -->
     </select>
 
     <div class="custom-time disable">
       <div class="month">
         <select name="month">
-          <option value="">All</option>
-          <option value="jan">January</option>
-          <option value="feb">February</option>
-          <option value="mar">March</option>
-          <option value="apr">April</option>
-          <option value="may">May</option>
-          <option value="jun">June</option>
-          <option value="jul">July</option>
-          <option value="aug">August</option>
-          <option value="sep">September</option>
-          <option value="oct">October</option>
-          <option value="nov">November</option>
-          <option value="dec">December</option>
+          <option value="">Min Pct Off</option>
+          <option value="5">5%</option>
+          <option value="10">10%</option>
+          <option value="20">20%</option>
+          <option value="30">30%</option>
+          <option value="40">40%</option>
+          <option value="50">50%</option>
+          <option value="60">60%</option>
+          <option value="70">70%</option>
+          <option value="80">80%</option>
+          <option value="90">90%</option>
         </select>
       </div>
-      <input type="text" maxlength="4" class="year" placeholder="Year" name="year">
+
+      <div class="max">
+        <select name="max">
+          <option value="">Max Pct Off</option>
+          <option value="5">5%</option>
+          <option value="10">10%</option>
+          <option value="20">20%</option>
+          <option value="30">30%</option>
+          <option value="40">40%</option>
+          <option value="50">50%</option>
+          <option value="60">60%</option>
+          <option value="70">70%</option>
+          <option value="80">80%</option>
+          <option value="90">90%</option>
+        </select>
+      </div>
+      <!-- <input type="text" maxlength="4" class="year" placeholder="Year" name="year"> -->
     </div>
   </div>
   
@@ -86,19 +100,21 @@
     var keyWord = $(".keyword").val();
     var timeType = $(".time select").val();
     var postMonth = $("select[name='month']").val();
-    var postYear = $(".year").val();
+    var postMax = $("select[name='max']").val();
+    // var postYear = $(".year").val();
     
     var key  = (keyWord === "") ? "" : keyWord;
     var type = (postType === "") ? "" : "&i=" + postType;
     
     var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
-    var month = (postMonth === "") ? "" : postMonth+"/";
-    var year = (postYear === "") ? "" : postYear+"/";
+    var month = (postMonth === "") ? "" : postMonth+"-";
+    var max = (postMax === "") ? "" : postMax;
+    // var year = (postYear === "") ? "" : postYear+"/";
     var postTime;
     
     if( timeType ==="custom" ){
-      if( month !== "" && year !==""){
-        postTime = month+year+"date-2/stories/";
+      if( month !== "" && max !==""){
+        postTime = "&rh=p_75%3A"+month+max;
       } else {
         postTime = "";
       }
