--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -76,6 +76,17 @@
       <!-- <input type="text" maxlength="4" class="year" placeholder="Year" name="year"> -->
     </div>
   </div>
+
+  <div class="option_box op_wrap">  
+    <p>Show Items With Coupons</p>
+    <div class="coupon-type on_off clearfix">
+      <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
+      <label class="first swich_off" for="coupon_off">OFF</label>
+
+      <input id="coupon" name="coupon-type" type="radio" value="2231352011">
+      <label for="coupon" class="swich_on">ON</label>
+    </div>
+  </div>
   
   <div class="text-center">
     <button class="search">Search</button>
@@ -97,6 +108,7 @@
   
   $(".search").on("click", function(){
     var postType = $("input:radio[name='post-type']:checked").val();
+    var couponType = $("input:radio[name='coupon-type']:checked").val();
     var keyWord = $(".keyword").val();
     var timeType = $(".time select").val();
     var postMonth = $("select[name='month']").val();
@@ -105,7 +117,7 @@
     
     var key  = (keyWord === "") ? "" : keyWord;
     var type = (postType === "") ? "" : "&i=" + postType;
-    
+    var coupon = (couponType === "") ? "" : "&srs=" + couponType;
     var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
     var month = (postMonth === "") ? "" : postMonth+"-";
     var max = (postMax === "") ? "" : postMax;
@@ -123,7 +135,7 @@
       postTime = time;
     }
     
-    var query = rootURL+ key + type + postTime + "&tag=oigbt-20";
+    var query = rootURL+ key + type + coupon + postTime + "&tag=oigbt-20";
 
     window.open(query, '_blank');
     
