--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -77,6 +77,17 @@
     </div>
   </div>
 
+  <div class="option_box op_wrap">
+      <p>Eligible For Prime</p>
+      <div class="prime-type on_off clearfix">
+        <input id="off" name="prime-type" type="radio" value="" checked>
+        <label class="first swich_off" for="off">OFF</label>
+
+        <input id="prime" name="prime-type" type="radio" value="p_85%3A2470955011">
+        <label for="prime" class="swich_on">ON</label>
+      </div>
+    </div>
+
   <div class="option_box op_wrap">  
     <p>Show Items With Coupons</p>
     <div class="coupon-type on_off clearfix">
@@ -108,6 +119,7 @@
   
   $(".search").on("click", function(){
     var postType = $("input:radio[name='post-type']:checked").val();
+    var primeType = $("input:radio[name='prime-type']:checked").val();
     var couponType = $("input:radio[name='coupon-type']:checked").val();
     var keyWord = $(".keyword").val();
     var timeType = $(".time select").val();
@@ -117,6 +129,7 @@
     
     var key  = (keyWord === "") ? "" : keyWord;
     var type = (postType === "") ? "" : "&i=" + postType;
+    var prime = (primeType === "") ? "" : "&rh=" + primeType;
     var coupon = (couponType === "") ? "" : "&srs=" + couponType;
     var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
     var month = (postMonth === "") ? "" : postMonth+"-";
@@ -135,7 +148,7 @@
       postTime = time;
     }
     
-    var query = rootURL+ key + type + coupon + postTime + "&tag=oigbt-20";
+    var query = rootURL+ key + type + prime + coupon + postTime + "&tag=oigbt-20";
 
     window.open(query, '_blank');
     
