--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -7,6 +7,18 @@
     <input id="electronics" name="post-type" type="radio" value="electronics">
     <label for="electronics">Electronics</label>
 
+    <input id="appliances" name="post-type" type="radio" value="appliances">
+    <label for="appliances">Appliances</label>
+
+    <input id="mobile-apps" name="post-type" type="radio" value="mobile-apps">
+    <label for="mobile-apps">Apps & Games</label>
+
+    <input id="arts-crafts" name="post-type" type="radio" value="arts-crafts">
+    <label for="arts-crafts">Arts, Crafts & Sewing</label>
+
+    <input id="automotive" name="post-type" type="radio" value="automotive">
+    <label for="automotive">Automotive</label>
+
     <input id="video" name="post-type" type="radio" value="video">
     <label for="video">Video</label>
 
@@ -109,6 +121,17 @@
       <label for="coupon" class="swich_on">ON</label>
     </div>
   </div>
+
+  <div class="option_box op_wrap">  
+    <p>Get it by tomorrow</p>
+    <div class="fast-type on_off clearfix">
+      <input id="fast_off" name="fast-type" type="radio" value="" checked>
+      <label class="first swich_off" for="fast_off">OFF</label>
+
+      <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&qid=1581933181&rnid=8308919011&ref=sr_nr_p_90_1">
+      <label for="fast" class="swich_on">ON</label>
+    </div>
+  </div>
   
   <div class="text-center">
     <button class="search">Search</button>
@@ -133,6 +156,7 @@
     var primeType = $("input:radio[name='prime-type']:checked").val();
     var couponType = $("input:radio[name='coupon-type']:checked").val();
     var shippingType = $("input:radio[name='shipping-type']:checked").val();
+    var fastType = $("input:radio[name='fast-type']:checked").val();
     var keyWord = $(".keyword").val();
     var timeType = $(".time select").val();
     var postMonth = $("select[name='month']").val();
@@ -144,6 +168,7 @@
     var prime = (primeType === "") ? "" : "&rh=p_85%3A1&dc&qid=" + primeType + "&ref=sr_nr_p_85_1";
     var coupon = (couponType === "") ? "" : "&srs=" + couponType;
     var shipping = (shippingType === "") ? "" : "&rh=" + shippingType;
+    var fast = (fastType === "") ? "" : "&rh=" + fastType;
     var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
     var month = (postMonth === "") ? "" : postMonth+"-";
     var max = (postMax === "") ? "" : postMax;
@@ -161,7 +186,7 @@
       postTime = time;
     }
     
-    var query = rootURL+ key + type + prime + coupon + postTime + "&tag=oigbt-20";
+    var query = rootURL+ key + type + prime + coupon + shipping + fast + postTime + "&tag=oigbt-20";
 
     window.open(query, '_blank');
     
