--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -573,23 +573,6 @@ header .gnb_m,header .gnb_open2{display:none;}
 .reset_set{}
 .reset_set a{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;}
 
-/* DropDown Categories */
-.container_set{}
-/*Styling Selectbox*/
-.dropdown_set{width:365px;display:inline-block;background-color:#fff;border-radius:10px;border:1px solid #e3e3e3;transition:all .5s ease;position:relative;font-size:14px;color:#616161;height:100%;text-align:left;}
-.dropdown_set:focus{outline:0;}
-.dropdown_set .select{cursor:pointer;display:block;padding:12px;}
-.dropdown_set .select > i{font-size:13px;color:#888;cursor:pointer;transition:all .3s ease-in-out;float:right;line-height:20px;}
-.dropdown_set:hover{box-shadow:0 0 4px rgb(204, 204, 204);}
-.dropdown_set:active{background-color:#f8f8f8;}
-.dropdown_set.active:hover,
-.dropdown_set.active{box-shadow:0 0 4px rgb(204, 204, 204);border-radius:5px 5px 0 0;background-color:#f8f8f8;}
-.dropdown_set.active .select > i{transform:rotate(-90deg);}
-.dropdown_set .dropdown-menu{position: absolute;background-color:#fff;width:100%;left:0;margin-top:1px;box-shadow:0 1px 2px rgb(204, 204, 204);border-radius:0 1px 5px 5px;overflow:hidden;display:none;max-height:300px;overflow-y:auto;z-index:50;}
-.dropdown_set .dropdown-menu li{padding: 10px;transition:all .2s ease-in-out;cursor: pointer;} 
-.dropdown_set .dropdown-menu{padding: 0;list-style:none;}
-.dropdown_set .dropdown-menu li:hover{background-color: #f2f2f2;}
-.dropdown_set .dropdown-menu li:active{background-color:#e2e2e2;}
 
 
 @media screen and (max-width:640px){
@@ -600,9 +583,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .field input, .field select{width:100%;float:none;}
   .field .custom-time{padding:10px 0 0 0;}
   .field .custom-time select, .field .custom-time input{width:48%;margin:0 1% 0 1%;}
-  .dropdown_set{width:100%;}
   .set_search_box h2{font-size:16px;}
-
   .set_banner{display:none;float:none;width:100%;margin:0 0 20px 0 ;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
@@ -626,7 +607,6 @@ header .gnb_m,header .gnb_open2{display:none;}
   border: 1px solid #aaa;
 }
 h2 {
-  font-weight: 300;
   margin: 0 0 20px;
 }
 .disable {
@@ -651,6 +631,8 @@ h2 {
   text-align: center;
   border:1px solid #ccc;
   cursor: pointer;
+  font-size:11px;
+  width:177px;
 }
 /*.post-type label:first-of-type {
   border-left: 1px solid #e3e3e3;
@@ -662,23 +644,23 @@ h2 {
   overflow: hidden;
 }
 .field span.label {
-  width: 40%;
+  width: 20%;
   float: left;
-  text-align: right;
+  /*text-align: right;*/
   padding: 5px 10px;
 }
 .field input,
 .field select {
   width: 60%;
   float: left;
-  padding: 5px 10px;
+  padding:10px;
   border: 1px solid #e3e3e3;
   -webkit-appearance: none;
   -moz-appearance: none;
        appearance: none;
-  border-radius: 0;
+  border-radius:10px;
 }
-.field .custom-time {
+/*.field .custom-time {
   padding-left: 40%;
   padding-top: 10px;
   clear: both;
@@ -686,10 +668,10 @@ h2 {
 .field .custom-time select,
 .field .custom-time input {
   width: 45%;
-}
-.field .custom-time select {
+}*/
+/*.field .custom-time select {
   margin-right: 10%;
-}
+}*/
 .text-center {
   padding-top: 30px;
   text-align: right;
@@ -699,6 +681,30 @@ button {
   border: none;
   padding: 10px 20px;
 }
+
+button.accordion{
+  margin-bottom:10px;
+  width: 30%;
+  margin-bottom: 10px;
+  background: #616161;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+}
+
+button.accordion span{font-size:15px;font-weight:bold;}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
+
+
+
+
 
 
 
