--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -1,137 +1,241 @@
-<div class="box">
+<div class="set_search_box">
   <h2>Simple Facebook Graph Search</h2>
-  <div class="post-type">
-    <input id="all-stories" name="post-type" type="radio" value="" checked>
-    <label class="first" for="all-stories">All</label>
 
-    <input id="electronics" name="post-type" type="radio" value="electronics">
-    <label for="electronics">Electronics</label>
+  <button class="accordion">See All Categories</button>
+  <div class="panel">
+    <div class="post-type">
+    
+      <input id="all-stories" name="post-type" type="radio" value="" checked>
+      <label class="first" for="all-stories">All</label></li>
 
-    <input id="appliances" name="post-type" type="radio" value="appliances">
-    <label for="appliances">Appliances</label>
+      <!-- <input id="instant-video" name="post-type" type="radio" value="instant-video">
+      <label for="instant-video">Amazon Video</label></li> -->
 
-    <input id="mobile-apps" name="post-type" type="radio" value="mobile-apps">
-    <label for="mobile-apps">Apps & Games</label>
+      <input id="appliances" name="post-type" type="radio" value="appliances">
+      <label for="appliances">Appliances</label></li>
 
-    <input id="arts-crafts" name="post-type" type="radio" value="arts-crafts">
-    <label for="arts-crafts">Arts, Crafts & Sewing</label>
+      <input id="mobile-apps" name="post-type" type="radio" value="mobile-apps">
+      <label for="mobile-apps">Apps & Games</label></li>
 
-    <input id="automotive" name="post-type" type="radio" value="automotive">
-    <label for="automotive">Automotive</label>
+      <input id="arts-crafts" name="post-type" type="radio" value="arts-crafts">
+      <label for="arts-crafts">Arts, Crafts & Sewing</label></li>
 
-    <input id="video" name="post-type" type="radio" value="video">
-    <label for="video">Video</label>
+      <input id="automotive" name="post-type" type="radio" value="automotive">
+      <label for="automotive">Automotive</label></li>
 
-    <input id="share" name="post-type" type="radio" value="share">
-    <label for="share">Share</label>
+      <input id="baby-products" name="post-type" type="radio" value="baby-products">
+      <label for="baby-products">Baby</label></li>
 
-    <input id="note" name="post-type" type="radio" value="note">
-    <label for="note">Note</label>
+      <input id="beauty" name="post-type" type="radio" value="beauty">
+      <label for="beauty">Beauty</label></li>
 
-    <input id="offer" name="post-type" type="radio" value="offer">
-    <label class="last" for="offer">Offer</label>
+      <input id="stripbooks" name="post-type" type="radio" value="stripbooks">
+      <label for="stripbooks">Books</label></li>
+
+      <input id="music" name="post-type" type="radio" value="music">
+      <label for="music">Music, CDs & Vinyl</label></li>
+
+      <input id="mobile" name="post-type" type="radio" value="mobile">
+      <label for="mobile">Cell Phones & Accessories</label></li>
+
+      <input id="fashion" name="post-type" type="radio" value="fashion">
+      <label for="fashion" class="read-more-target">Clothing, Shoes & Jewelry</label></li>
+
+      <input id="fashion-womens" name="post-type" type="radio" value="fashion-womens">
+      <label for="fashion-womens" class="read-more-target">Women's Fashion</label></li>
+
+      <input id="fashion-mens" name="post-type" type="radio" value="fashion-mens">
+      <label for="fashion-mens" class="read-more-target">Men's Fashion</label></li>
+
+      <input id="fashion-girls" name="post-type" type="radio" value="fashion-girls">
+      <label for="fashion-girls" class="read-more-target">Girl's Fashion</label></li>
+
+      <input id="fashion-boys" name="post-type" type="radio" value="fashion-boys">
+      <label for="fashion-boys" class="read-more-target">Boy's Fashion</label></li>
+
+      <input id="Computers" name="post-type" type="radio" value="Computers">
+      <label for="Computers" class="read-more-target">Computers</label></li>
+
+      <!-- <input id="Credit" name="post-type" type="radio" value="Credit">
+      <label for="Credit" class="read-more-target">Credit and Payment Cards</label></li> -->
+
+      <input id="digital-music" name="post-type" type="radio" value="digital-music">
+      <label for="digital-music" class="read-more-target">Digital Music</label></li>
+
+      <!-- <input id="electronics" name="post-type" type="radio" value="electronics">
+      <label for="electronics" class="read-more-target">Electronics</label></li> -->
+
+      <input id="grocery" name="post-type" type="radio" value="grocery">
+      <label for="grocery" class="read-more-target">Grocery & Gourmet Food</label></li>
+
+      <input id="handmade" name="post-type" type="radio" value="handmade">
+      <label for="handmade" class="read-more-target">Handmade</label></li>
+
+      <input id="hpc" name="post-type" type="radio" value="hpc">
+      <label for="hpc" class="read-more-target">Health & Personal Care</label></li>
+
+      <input id="kitchen" name="post-type" type="radio" value="kitchen">
+      <label for="kitchen" class="read-more-target">Home & Kitchen</label></li>
+
+      <input id="local-services" name="post-type" type="radio" value="local-services">
+      <label for="local-services" class="read-more-target">Home Services</label></li>
+
+      <!-- <input id="industrial" name="post-type" type="radio" value="industrial">
+      <label for="industrial" class="read-more-target">Industrial & Scientific</label></li> -->
+
+      <input id="digital-text" name="post-type" type="radio" value="digital-text">
+      <label for="digital-text" class="read-more-target">Kindle Store</label></li>
+
+      <input id="luggage" name="post-type" type="radio" value="luggage">
+      <label for="luggage" class="read-more-target">Luggage & Travel Gear</label></li>
+
+      <input id="luxury-beauty" name="post-type" type="radio" value="luxury-beauty">
+      <label for="luxury-beauty" class="read-more-target">Luxury Beauty</label></li>
+
+      <input id="magazines" name="post-type" type="radio" value="magazines">
+      <label for="magazines" class="read-more-target">Magazine Subscriptions</label></li>
+
+      <input id="movies-tv" name="post-type" type="radio" value="movies-tv">
+      <label for="movies-tv" class="read-more-target">Movies & TV</label></li>
+
+      <input id="mi" name="post-type" type="radio" value="mi">
+      <label for="mi" class="read-more-target">Musical Instruments</label></li>
+
+      <input id="office-products" name="post-type" type="radio" value="office-products">
+      <label for="office-products" class="read-more-target">Office Products</label></li>
+
+      <input id="lawngarden" name="post-type" type="radio" value="lawngarden">
+      <label for="lawngarden" class="read-more-target">Patio, Lawn & Garden</label></li>
+
+      <input id="instant-video" name="post-type" type="radio" value="instant-video">
+      <label for="instant-video" class="read-more-target">Prime Vidoe</label></li>
+
+      <input id="pets" name="post-type" type="radio" value="pets">
+      <label for="pets" class="read-more-target">Pet Supplies</label></li>
+
+      <input id="software" name="post-type" type="radio" value="software">
+      <label for="software" class="read-more-target">Software</label></li>
+
+      <input id="sporting" name="post-type" type="radio" value="sporting">
+      <label for="sporting" class="read-more-target">Sports & Outdoors</label></li>
+
+      <input id="tools" name="post-type" type="radio" value="tools">
+      <label for="tools" class="read-more-target">Tools & Home Improvement</label></li>
+
+      <input id="toys-and-games" name="post-type" type="radio" value="toys-and-games">
+      <label for="toys-and-games" class="read-more-target">Toys & Games</label></li>
+
+      <input id="videogames" name="post-type" type="radio" value="videogames">
+      <label for="videogames" class="read-more-target">Video Games</label></li>
+       
+    </div>
   </div>
 
-  <div class="field ">
-    <span class="label">Search Keyword</span>
-    <input type="text" class="keyword" placeholder="Keyword or website.com" value="">
-  </div>
 
-  <div class="field time">
-    <span class="label">Time & Date</span>
-    <select name="time">
-      <option value="">Anytime</option>
-      <option value="custom">Custom</option>
-      <!-- <option value="stories-live">Just now (live)</option>
-      <option value="today/date/stories">Today</option>
-      <option value="yesterday/date/stories">Yesterday</option>
-      <option value="this-week/date/stories">This week</option>
-      <option value="last-week/date/stories">Last week</option>
-      <option value="this-month/date/stories">This month</option>
-      <option value="last-month/date/stories">Last month</option>
-      <option value="this-year/date/stories">This year</option>
-      <option value="last-year/date/stories">Last year</option> -->
-    </select>
+  <div class="feild_wrap">
+    <div class="field ">
+      <span class="label">Search Keyword</span>
+      <input type="text" class="keyword" placeholder="Keyword or website.com" value="">
+    </div>
 
-    <div class="custom-time disable">
-      <div class="month">
-        <select name="month">
-          <option value="">Min Pct Off</option>
-          <option value="5">5%</option>
-          <option value="10">10%</option>
-          <option value="20">20%</option>
-          <option value="30">30%</option>
-          <option value="40">40%</option>
-          <option value="50">50%</option>
-          <option value="60">60%</option>
-          <option value="70">70%</option>
-          <option value="80">80%</option>
-          <option value="90">90%</option>
-        </select>
+    <div class="field time">
+      <span class="label">Time & Date</span>
+      <select name="time">
+        <option value="">Anytime</option>
+        <option value="custom">Custom</option>
+        <!-- <option value="stories-live">Just now (live)</option>
+        <option value="today/date/stories">Today</option>
+        <option value="yesterday/date/stories">Yesterday</option>
+        <option value="this-week/date/stories">This week</option>
+        <option value="last-week/date/stories">Last week</option>
+        <option value="this-month/date/stories">This month</option>
+        <option value="last-month/date/stories">Last month</option>
+        <option value="this-year/date/stories">This year</option>
+        <option value="last-year/date/stories">Last year</option> -->
+      </select>
+
+      <div class="custom-time disable">
+        <div class="month">
+          <select name="month">
+            <option value="">Min Pct Off</option>
+            <option value="5">5%</option>
+            <option value="10">10%</option>
+            <option value="20">20%</option>
+            <option value="30">30%</option>
+            <option value="40">40%</option>
+            <option value="50">50%</option>
+            <option value="60">60%</option>
+            <option value="70">70%</option>
+            <option value="80">80%</option>
+            <option value="90">90%</option>
+          </select>
+        </div>
+
+        <div class="max">
+          <select name="max">
+            <option value="">Max Pct Off</option>
+            <option value="5">5%</option>
+            <option value="10">10%</option>
+            <option value="20">20%</option>
+            <option value="30">30%</option>
+            <option value="40">40%</option>
+            <option value="50">50%</option>
+            <option value="60">60%</option>
+            <option value="70">70%</option>
+            <option value="80">80%</option>
+            <option value="90">90%</option>
+          </select>
+        </div>
+        <!-- <input type="text" maxlength="4" class="year" placeholder="Year" name="year"> -->
+      </div><!--custom-time-->
+    </div><!--field-->
+  </div><!--feild_wrap-->
+
+  <div class="option_wrap">
+    <div class="option_box op_wrap">
+      <p>Eligible For Prime</p>
+      <div class="prime-type on_off clearfix">
+        <input id="off" name="prime-type" type="radio" value="" checked>
+        <label class="first swich_off" for="off">OFF</label>
+
+        <input id="prime" name="prime-type" type="radio" value="1582276412">
+        <label for="prime" class="swich_on">ON</label>
       </div>
+    </div>
 
-      <div class="max">
-        <select name="max">
-          <option value="">Max Pct Off</option>
-          <option value="5">5%</option>
-          <option value="10">10%</option>
-          <option value="20">20%</option>
-          <option value="30">30%</option>
-          <option value="40">40%</option>
-          <option value="50">50%</option>
-          <option value="60">60%</option>
-          <option value="70">70%</option>
-          <option value="80">80%</option>
-          <option value="90">90%</option>
-        </select>
+    <div class="option_box op_wrap">  
+      <p>Eligible for Free Shipping</p>
+      <div class="shipping-type on_off clearfix">
+        <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
+        <label class="first swich_off" for="shipping_off">OFF</label>
+
+        <input id="shipping" name="shipping-type" type="radio" value="p_76%3A2661625011">
+        <label for="shipping" class="swich_on">ON</label>
       </div>
-      <!-- <input type="text" maxlength="4" class="year" placeholder="Year" name="year"> -->
     </div>
-  </div>
 
-  <div class="option_box op_wrap">
-    <p>Eligible For Prime</p>
-    <div class="prime-type on_off clearfix">
-      <input id="off" name="prime-type" type="radio" value="" checked>
-      <label class="first swich_off" for="off">OFF</label>
+    <div class="option_box op_wrap">  
+      <p>Show Items With Coupons</p>
+      <div class="coupon-type on_off clearfix">
+        <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
+        <label class="first swich_off" for="coupon_off">OFF</label>
 
-      <input id="prime" name="prime-type" type="radio" value="1582276412">
-      <label for="prime" class="swich_on">ON</label>
+        <input id="coupon" name="coupon-type" type="radio" value="2231352011">
+        <label for="coupon" class="swich_on">ON</label>
+      </div>
     </div>
-  </div>
 
-  <div class="option_box op_wrap">  
-    <p>Eligible for Free Shipping</p>
-    <div class="shipping-type on_off clearfix">
-      <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
-      <label class="first swich_off" for="shipping_off">OFF</label>
+    <div class="option_box op_wrap">  
+      <p>Get it by tomorrow</p>
+      <div class="fast-type on_off clearfix">
+        <input id="fast_off" name="fast-type" type="radio" value="" checked>
+        <label class="first swich_off" for="fast_off">OFF</label>
 
-      <input id="shipping" name="shipping-type" type="radio" value="p_76%3A2661625011">
-      <label for="shipping" class="swich_on">ON</label>
+        <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&qid=1581933181&rnid=8308919011&ref=sr_nr_p_90_1">
+        <label for="fast" class="swich_on">ON</label>
+      </div>
     </div>
-  </div>
-
-  <div class="option_box op_wrap">  
-    <p>Show Items With Coupons</p>
-    <div class="coupon-type on_off clearfix">
-      <input id="coupon_off" name="coupon-type" type="radio" value="" checked>
-      <label class="first swich_off" for="coupon_off">OFF</label>
-
-      <input id="coupon" name="coupon-type" type="radio" value="2231352011">
-      <label for="coupon" class="swich_on">ON</label>
-    </div>
-  </div>
-
-  <div class="option_box op_wrap">  
-    <p>Get it by tomorrow</p>
-    <div class="fast-type on_off clearfix">
-      <input id="fast_off" name="fast-type" type="radio" value="" checked>
-      <label class="first swich_off" for="fast_off">OFF</label>
-
-      <input id="fast" name="fast-type" type="radio" value="p_90%3A8308921011&dc&qid=1581933181&rnid=8308919011&ref=sr_nr_p_90_1">
-      <label for="fast" class="swich_on">ON</label>
-    </div>
-  </div>
+  </div><!--option_wrap-->
   
   <div class="text-center">
     <button class="search">Search</button>
@@ -192,4 +296,22 @@
     
   });
 });
+</script>
+
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.display === "block") {
+      panel.style.display = "none";
+    } else {
+      panel.style.display = "block";
+    }
+  });
+}
 </script>
