--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -560,13 +560,13 @@ header .gnb_m,header .gnb_open2{display:none;}
 /*.post-type label{float:left;width:20%;padding:10px;border:1px solid #ccc;}*/
 /*.post-type label:first-of-type, */.prime-type label:first-of-type, .coupon-type label:first-of-type, .shipping-type label:first-of-type, .fast-type label:first-of-type{border-left:1px solid #e3e3e3;}
 .field {padding:15px 0;overflow:hidden;}
-.field span.label{width:20%;float:left;padding:10px 10px;}
+.field span.label{width:25%;float:left;padding:10px;}
 .field input, .field select{width:50%;float:left;padding:14px 10px;border:1px solid #e3e3e3;-webkit-appearance:none;-moz-appearance:none;appearance:none;border-radius:10px;background:#fff;color:#616161;font-size:14px;}
 .field .custom-time{padding-left:40%;padding-top:10px;clear:both;}
 .field .custom-time select, .field .custom-time input{float:left;width:45%;}
 .field .custom-time select {margin-right:5%;}
 .down_ct{overflow:visible;}
-.text-center {padding-top:30px;text-align:right;}
+.text-center{padding-top:30px;text-align:right;}
 .set_search_box button{width:40%;background:#08f;border:none;padding:15px 30px;color:#fff;font-weight:500;font-size:20px;border-radius:10px;}
 .search_dropdown{display:inline-block;}
 
@@ -590,65 +590,33 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 
-
-
-
-
-
-
-
-.box {
-  width: 800px;
-  background: white;
-  margin: auto;
-  border-radius: 5px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  border: 1px solid #aaa;
-}
-h2 {
-  margin: 0 0 20px;
-}
-.disable {
-  display: none;
-}
-.post-type {
+/*.post-type {
   display: block;
   margin-bottom: 20px;
-}
-.post-type input {
+}*/
+/*.post-type input {
   display: none;
-}
-.post-type input:checked + label {
+}*/
+/*.post-type input:checked + label {
   background: #bad455;
   color: white;
-}
-.post-type label {
-  /*display: table-cell;*/
-  display:inline-block;
-  margin-bottom:10px;
-  padding: 10px;
-  text-align: center;
-  border:1px solid #ccc;
-  cursor: pointer;
-  font-size:11px;
-  width:177px;
-}
+}*/
+.post-type label{display:inline-block;margin-bottom:10px;padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer;font-size:11px;}
 /*.post-type label:first-of-type {
   border-left: 1px solid #e3e3e3;
 }*/
 
 
-.field {
+/*.field {
   padding: 15px 0;
   overflow: hidden;
-}
-.field span.label {
+}*/
+/*.field span.label {
   width: 20%;
   float: left;
-  /*text-align: right;*/
+  text-align: right;
   padding: 5px 10px;
-}
+}*/
 .field input,
 .field select {
   width: 60%;
@@ -672,34 +640,14 @@ h2 {
 /*.field .custom-time select {
   margin-right: 10%;
 }*/
-.text-center {
+/*.text-center {
   padding-top: 30px;
   text-align: right;
-}
-button {
-  background: #bad455;
-  border: none;
-  padding: 10px 20px;
-}
-
-button.accordion{
-  margin-bottom:10px;
-  width: 30%;
-  margin-bottom: 10px;
-  background: #616161;
-  color: #fff;
-  font-size: 15px;
-  border-radius: 10px;
-}
-
+}*/
+button{background:#bad455;border:none;padding:10px 20px;}
+button.accordion{margin-bottom:10px;width:30%;margin-bottom:10px;background:#616161;color:#fff;font-size:15px;border-radius:10px;}
 button.accordion span{font-size:15px;font-weight:bold;}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color: white;
-  overflow: hidden;
-}
+.panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
 
 
 
