--- a/app/views/deals/_isnot.html.erb
+++ b/app/views/deals/_isnot.html.erb
@@ -59,11 +59,11 @@
       <!-- <input id="Credit" name="post-type" type="radio" value="Credit">
       <label for="Credit" class="read-more-target">Credit and Payment Cards</label></li> -->
 
-      <input id="digital-music" name="post-type" type="radio" value="digital-music">
-      <label for="digital-music" class="read-more-target">Digital Music</label></li>
+      <!-- <input id="digital-music" name="post-type" type="radio" value="digital-music">
+      <label for="digital-music" class="read-more-target">Digital Music</label></li> -->
 
-      <!-- <input id="electronics" name="post-type" type="radio" value="electronics">
-      <label for="electronics" class="read-more-target">Electronics</label></li> -->
+      <input id="electronics" name="post-type" type="radio" value="electronics">
+      <label for="electronics" class="read-more-target">Electronics</label></li>
 
       <input id="grocery" name="post-type" type="radio" value="grocery">
       <label for="grocery" class="read-more-target">Grocery & Gourmet Food</label></li>
@@ -139,10 +139,10 @@
     </div>
 
     <div class="field time">
-      <span class="label">Time & Date</span>
+      <span class="label">Search Option</span>
       <select name="time">
-        <option value="">Anytime</option>
-        <option value="custom">Custom</option>
+        <option value="">Select</option>
+        <option value="custom">Set Discount Range</option>
         <!-- <option value="stories-live">Just now (live)</option>
         <option value="today/date/stories">Today</option>
         <option value="yesterday/date/stories">Yesterday</option>
@@ -243,7 +243,7 @@
 </div>
 
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   $(document).ready(function(){
   var rootURL = "https://www.amazon.com/s?k=";
   
@@ -314,4 +314,4 @@ for (i = 0; i < acc.length; i++) {
     }
   });
 }
-</script>
+</script> -->
