--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -297,6 +297,8 @@
       </div>
     </div>
 
+    <a class="set_reset_m" href="/deals/quick_search">Reset</a>
+
     <!-- <div class="option_box op_wrap">  
       <p>Get it by tomorrow</p>
       <div class="fast-type on_off clearfix">
