--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -297,7 +297,7 @@ header .gnb_m,header .gnb_open2{display:none;}
   .common_layout .lt_cnt img{}
   .common_layout .rt_cnt{float:none;width:100%;}
   .common_layout .rt_cnt h2{font-size:16px;display:none;}
-  .common_layout .rt_cnt h2.for_m{margin-top:60px;display:block;}
+  .common_layout .rt_cnt h2.for_m{margin-top:15px;display:block;}
   .common_layout .rt_cnt p.for_m{display:block;}
 }
 
@@ -541,7 +541,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 
 
-.set_search{font-family:'Montserrat', sans-serif;}
+.set_search{font-family:'Montserrat', sans-serif;margin-bottom:50px;}
 .set_banner{float:left;width:33%;margin-right:2%;border:1px solid #aaa;border-radius:10px;box-shadow:0 2px 10px rgba(0, 0, 0, 0.1);padding:15px;height:650px;overflow:scroll;}
 .set_banner ul{margin-left:15px;}
 .set_banner ul li{margin:5px 0;list-style:disc;}
@@ -580,10 +580,11 @@ header .gnb_m,header .gnb_open2{display:none;}
 .set_search_box .panel{padding:0 18px;display:none;background-color:#fff;overflow:hidden;}
 .set_search_box .feild_wrap, .set_search_box .option_wrap{margin-bottom:30px;}
 
-/*.reset_set{float:left;vertical-align:middle;}*/
-a.set_reset{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;float:left;}
+a.set_reset, a.set_reset_m{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:10px;margin-left:1%;float:left;}
+a.set_reset_m{display:none;}
 
 @media screen and (max-width:640px){
+  .set_search{display:none;}
   .op_wrap{float:none;width:100%;margin:0;}
   .set_search_box{width:100%;margin-bottom:0;padding:15px;}
   .set_search_box button{width:100%;} 
@@ -595,42 +596,13 @@ a.set_reset{border:1px solid #ccc;padding:10px 50px;color:#616161;border-radius:
   .set_search_box .panel{padding:0;}
   .set_search_box h2{font-size:16px;}
   .set_banner{display:none;float:none;width:100%;margin:0 0 20px 0 ;}
+  a.set_reset{display:none;}
+  a.set_reset_m{display:block;}
+  
 }
 @media screen and (min-width:641px) and (max-width:1199px){
+  .set_search{display:none;}
 }
-
-
-
-
-
-/*.field input,
-.field select{
-  width: 60%;
-  float: left;
-  padding:10px;
-  border: 1px solid #e3e3e3;
-  -webkit-appearance: none;
-  -moz-appearance: none;appearance:none;border-radius:10px;}*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
