--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -333,3 +333,153 @@
     </div><!--./wrap-->
   </div><!--./layout-->
   <script><%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %></script>
+
+
+
+<script type="text/javascript">
+
+function isMobile(){
+
+  var UserAgent = navigator.userAgent;
+
+
+
+  if (UserAgent.match(/iPhone|iPod|Android|Windows CE|BlackBerry|Symbian|Windows Phone|webOS|Opera Mini|Opera Mobi|POLARIS|IEMobile|lgtelecom|nokia|SonyEricsson/i) != null || UserAgent.match(/LG|SAMSUNG|Samsung/) != null)
+
+  {
+
+    return true;
+
+  }else{
+
+    return false;
+
+  }
+
+}
+
+
+
+if(isMobile()){
+
+  //모바일페이지
+  $(document).ready(function(){
+  var rootURL = "https://www.amazon.com/s?i=";
+
+  $("select[name='time']").change(function(){
+    if ( $(this).val() === "custom" ){
+      $(".custom-time").removeClass("disable");
+    } else {
+      $(".custom-time").addClass("disable");
+    }
+  });
+  
+  $(".search").on("click", function(){
+    var postType = $("input:radio[name='post-type']:checked").val();
+    var primeType = $("input:radio[name='prime-type']:checked").val();
+    var couponType = $("input:radio[name='coupon-type']:checked").val();
+    var shippingType = $("input:radio[name='shipping-type']:checked").val();
+    var fastType = $("input:radio[name='fast-type']:checked").val();
+    var keyWord = $(".keyword").val();
+    var timeType = $(".time select").val();
+    var postMonth = $("select[name='month']").val();
+    var postMax = $("select[name='max']").val();
+    // var postYear = $(".year").val();
+    
+    var key  = (keyWord === "") ? "" : keyWord;
+    var type = (postType === "") ? "" : "&i=" + postType;
+    var prime = (primeType === "") ? "" : "&rh=p_85%3A1&dc&qid=" + primeType + "&ref=sr_nr_p_85_1";
+    var coupon = (couponType === "") ? "" : "&srs=" + couponType;
+    var shipping = (shippingType === "") ? "" : "&rh=" + shippingType;
+    var fast = (fastType === "") ? "" : "&rh=" + fastType;
+    var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
+    var month = (postMonth === "") ? "" : postMonth+"-";
+    var max = (postMax === "") ? "" : postMax;
+    // var year = (postYear === "") ? "" : postYear+"/";
+    var postTime;
+    
+    if( timeType ==="custom" ){
+      if( month !== "" && max !==""){
+        postTime = "&rh=p_75%3A"+month+max;
+      } else {
+        postTime = "";
+      }
+    } else {
+      
+      postTime = time;
+    }
+    
+    var query = rootURL+ key + type + prime + coupon + shipping + fast + postTime + "&tag=oigbt-20";
+
+    window.open(query, '_blank');
+    
+  });
+});
+
+
+}else{
+
+  //PC용 페이지
+  $(document).ready(function(){
+  var rootURL = "https://www.amazon.com/s?k=";
+
+  $("select[name='time']").change(function(){
+    if ( $(this).val() === "custom" ){
+      $(".custom-time").removeClass("disable");
+    } else {
+      $(".custom-time").addClass("disable");
+    }
+  });
+  
+  $(".search").on("click", function(){
+    var postType = $("input:radio[name='post-type']:checked").val();
+    var primeType = $("input:radio[name='prime-type']:checked").val();
+    var couponType = $("input:radio[name='coupon-type']:checked").val();
+    var shippingType = $("input:radio[name='shipping-type']:checked").val();
+    var fastType = $("input:radio[name='fast-type']:checked").val();
+    var keyWord = $(".keyword").val();
+    var timeType = $(".time select").val();
+    var postMonth = $("select[name='month']").val();
+    var postMax = $("select[name='max']").val();
+    // var postYear = $(".year").val();
+    
+    var key  = (keyWord === "") ? "" : keyWord;
+    var type = (postType === "") ? "" : "&i=" + postType;
+    var prime = (primeType === "") ? "" : "&rh=p_85%3A1&dc&qid=" + primeType + "&ref=sr_nr_p_85_1";
+    var coupon = (couponType === "") ? "" : "&srs=" + couponType;
+    var shipping = (shippingType === "") ? "" : "&rh=" + shippingType;
+    var fast = (fastType === "") ? "" : "&rh=" + fastType;
+    var time = (timeType === "" || timeType === "custom") ? "": timeType + "/";
+    var month = (postMonth === "") ? "" : postMonth+"-";
+    var max = (postMax === "") ? "" : postMax;
+    // var year = (postYear === "") ? "" : postYear+"/";
+    var postTime;
+    
+    if( timeType ==="custom" ){
+      if( month !== "" && max !==""){
+        postTime = "&rh=p_75%3A"+month+max;
+      } else {
+        postTime = "";
+      }
+    } else {
+      
+      postTime = time;
+    }
+    
+    var query = rootURL+ key + type + prime + coupon + shipping + fast + postTime + "&tag=oigbt-20";
+
+    window.open(query, '_blank');
+    
+  });
+});
+
+}
+
+
+</script>
+
+
+
+
+
+
