--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -270,7 +270,8 @@
         <input id="off" name="prime-type" type="radio" value="" checked>
         <label class="first swich_off" for="off">OFF</label>
 
-        <input id="prime" name="prime-type" type="radio" value="1582276412">
+        <!-- <input id="prime" name="prime-type" type="radio" value="1582276412"> -->
+        <input id="prime" name="prime-type" type="radio" value="p_85:2470955011">
         <label for="prime" class="swich_on">ON</label>
       </div>
     </div>
