--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -388,7 +388,7 @@ if(isMobile()){
     
     var key  = (keyWord === "") ? "" : "&field-keywords=" + keyWord;
     var type = (postType === "") ? "" : "&i=" + postType;
-    var prime = (primeType === "") ? "" : "&rh=p_85%3A1&dc&qid=" + primeType + "&ref=sr_nr_p_85_1";
+    var prime = (primeType === "") ? "" : "&rh=" + primeType;
     var coupon = (couponType === "") ? "" : "&srs=" + couponType;
     var shipping = (shippingType === "") ? "" : "&rh=" + shippingType;
     var fast = (fastType === "") ? "" : "&rh=" + fastType;
