--- a/app/views/deals/_set_search.html.erb
+++ b/app/views/deals/_set_search.html.erb
@@ -282,7 +282,7 @@
         <input id="shipping_off" name="shipping-type" type="radio" value="" checked>
         <label class="first swich_off" for="shipping_off">OFF</label>
 
-        <input id="shipping" name="shipping-type" type="radio" value="p_76%3A2661625011">
+        <input id="shipping" name="shipping-type" type="radio" value="p_76:2661625011">
         <label for="shipping" class="swich_on">ON</label>
       </div>
     </div>
